# hackathon-berlin-2025-07-19

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: README.md  pipeline  pyproject.toml  requirements.txt  run.sh
apps/backend-pipeline/: Dockerfile  README.md  docker-compose.yml  pipeline.yaml
apps/backend-pipeline/server/: bot_fast_api.py  bot_websocket_server.py
apps/backend/server/: bot_fast_api.py  bot_websocket_server.py  instruction.txt  server.py
apps/demo-frontend/: package.json
apps/demo-frontend/src/components/: ConnectButton.tsx
apps/demo-frontend/src/providers/: PipecatProvider.tsx
apps/frontend/: package.json
apps/frontend/src/: App.tsx  Controls.tsx  VoiceChat.tsx  index.css
