[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.0",
    "nvidia-cudnn-cu12>=9.11.0.98",
    "pipecat-ai[silero,websocket,whisper]>=0.0.76",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
